--- a/app/View/index.html
+++ b/app/View/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Navegación en HTML</title>
-    <link href="../WebStyles/root.css" rel='stylesheet'/>
+    <link href="../Styles/root.css" rel='stylesheet'/>
 </head>
 <body>
     <ul>
