primer cambio_Mauricio

--- a/app/View/index.html
+++ b/app/View/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="contacto.html">Contactar</a></li>
         <li><a href="acerca.html">Acerca De</a></li>
     </ul>
     <h1>Inicio</h1>
