nuevo parrafo añadido

--- a/app/View/index.html
+++ b/app/View/index.html
@@ -14,5 +14,6 @@
         <li><a href="acerca.html">Acerca De</a></li>
     </ul>
     <h1>Inicio</h1>
+    <h3>Se añade un nuevo parrafo</h3>
 </body>
 </html>
