--- a/app/Templates/adm_seguridad.html
+++ b/app/Templates/adm_seguridad.html
@@ -8,9 +8,9 @@
 
 
 {% block contenido_1 %}
-<v-card class="d-flex align-center pa-2" flat height="250px" elevation=15> 
+<v-card class="d-flex align-center pa-2" height="250px" elevation=15> 
     <v-card-text>
-        <v-container fluid>
+         <v-container fluid>
             <v-row class="d-flex align-center pt-3" justify="space-around" no-gutters>
                 <v-col class="px-2 py-2">
                     <v-card class="px-2 py-2">
