--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -126,7 +126,8 @@
             drawer: null,
             dial_reg: false,
             error: null,
-            userloggedIn: true,
+            email: '',
+            user_name: '',
           }),
         }
       </script>
