--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -21,7 +21,7 @@
           <p class="text-subtitle-1 font-weight-bold">Consultar disponibilidad para tu estadia en la ciudad</p>
         </v-card-text>
         <v-toolbar dense floating>
-          <v-text-field type=date label="Start date" clear-icon="mdi-clear" hide-details prepend-icon="mdi-magnify" single-line click click:clear></v-text-field>
+          <v-text-field type=date label="Start date" clear-icon="mdi-clear" hide-details prepend-icon="mdi-magnify" single-line clearable></v-text-field>
           <v-btn icon>
             <v-icon>mdi-dots-vertical</v-icon>
           </v-btn>
