--- a/app/Templates/usr_login.html
+++ b/app/Templates/usr_login.html
@@ -3,68 +3,56 @@
 {% block titulo %} Centara Grand Hotel {% endblock %}
 {% block tit_bar %} Centara Grand Hotel {% endblock %}
 {% block contenido_1 %}
-<template>
-    <v-card class="d-flex align-center pa-2" elevation=15 width="350">
-      <v-card-title>Acceso a la Aplicación</v-card-title>    
-          <form name="FormularioLogin" @submit.prevent="submit">
 
+<v-container fluid>
+  <v-row class="align-center pa-2" justify="center">
+    <v-col cols="12" sm="6" md="4" class="px-2 py-2">
+      <v-card class="align-center pa-2" elevation=15 width="350">
+        <v-card-title>Acceso a la Aplicación</v-card-title>    
+          <form name="formulariologin" @submit.prevent="submit" method="POST">
               <v-text-field
-                v-model="user_name"
+                name="user_name"
                 :counter="25"
-                :error-messages="errors"
                 solo
                 type="email"
                 label="Nombre de Usuario"
                 id="user_name"
                 required
                 prepend-inner-icon="mdi-account"
+                clearable
               ></v-text-field>
 
               <v-text-field
-                v-model="usrpassword"
-                :error-messages="errors"
+                name="usrpassword"
                 solo
                 type="password"
                 label="Clave de Acceso"
                 required
-                prepend-inner-icon="mdi-lock"
-              ></v-text-field>
-              <v-img src="{{ url_for('static', filename='img/ver.png') }}" width=50 height=50 onmouseover="verClave();" onmouseout="ocultarClave()"></v-img>
-     
-            <v-btn
-              class="mr-4"
-              type="submit"
-              :disabled="invalid"
-            >
-              Acceder
-            </v-btn>
-            <v-btn @click="clear">
-              Salir
-            </v-btn>
+                prepend-inner-icon="mdi-lock"           
+              >
+                <template v-slot:append-outer>
+                  <v-tooltip
+                    bottom
+                  >
+                    <template v-slot:activator="{ on }">
+                      <v-icon v-on="on" onmouseover="verClave_Log();" onmouseout="ocultarClave_Log()">
+                        mdi-eye
+                      </v-icon>
+                    </template>
+                    Ver la Clave
+                  </v-tooltip>
+                </template>
+              
+              </v-text-field>
+
+            <v-btn class="mr-4" type="submit">Acceder</v-btn>
+            <v-btn @click="clear">Salir</v-btn>
           </form>
-     
-    </v-card>
- </template>
-<script>
-    export default {
-      data: () => ({
-        user_name: '',
-        usrpassword: '',
-      }),
-  
-      methods: {
-        submit () {
-          this.$refs.observer.validate()
-        },
-        clear () {
-          this.name = ''
-          this.email = ''
-          this.checkbox = null
-          this.$refs.observer.reset()
-        },
-      },
-    }
-  </script>
+      </v-card>
+    </v-col>
+  </v-row>
+</v-container>
+
 
 {% endblock %}
 {% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen en quantumsdata.co, son propiedad de sus respectivos dueños. {% endblock %}
