Update Login completo al dashboard

--- a/app/Templates/usr_login.html
+++ b/app/Templates/usr_login.html
@@ -9,7 +9,7 @@
     <v-col cols="12" sm="6" md="4" class="px-2 py-2">
       <v-card class="align-center pa-2" elevation=15 width="350">
         <v-card-title>Acceso a la Aplicación</v-card-title>    
-          <form name="formulariologin" @submit.prevent="submit" method="POST">
+          <form name="formulariologin" @submit="submit" method="POST">
               <v-text-field
                 name="user_name"
                 :counter="25"
@@ -46,7 +46,7 @@
               </v-text-field>
 
             <v-btn class="mr-4" type="submit">Acceder</v-btn>
-            <v-btn @click="clear">Salir</v-btn>
+            <v-btn href="/">Salir</v-btn>
           </form>
       </v-card>
     </v-col>
