--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -17,7 +17,7 @@
             <v-app-bar-nav-icon @click="drawer = !drawer" title="Menu"></v-app-bar-nav-icon>
             <v-toolbar-title class="xs-4" shrink-on-scroll>{% block tit_bar %} {% endblock %}</v-toolbar-title>
             <v-spacer></v-spacer>
-            <v-btn class="pd-2 ml-4 xs" elevation="8" rounded outlined to="login_main" @click="dial_reg = true">
+            <v-btn class="pd-2 ml-4 xs" elevation="8" rounded outlined href="/usr_login" @click="dial_reg = true">
               <v-icon class="md-2" left>mdi-account-circle</v-icon>
               {% block btn_login %} {% endblock %}
             </v-btn>
@@ -27,7 +27,7 @@
               {% block btn_exit %} {% endblock %}      
             </v-btn>
             
-            <v-btn v-else class="success pd-2 ml-4 xs" elevation="8" rounded to="register_main" @click="dial_reg = true">
+            <v-btn v-else class="success pd-2 ml-4 xs" elevation="8" rounded href="/usr_registro" @click="dial_reg = true">
               <v-icon class="md-2" left>mdi-account-plus</v-icon>
               {% block btn_signin %} {% endblock %}       
             </v-btn>
