Update Login, Modulo Registro, Dashboard, rutas

--- a/app/Templates/adm_comentarios.html
+++ b/app/Templates/adm_comentarios.html
@@ -14,7 +14,7 @@
             <v-row class="d-flex align-center pt-3" justify="space-around" no-gutters>
                 <v-col class="px-2 py-2">
                     <v-card class="px-2 py-2">
-                        <v-card-title>Seguridad</v-card-title>
+                        <v-card-title>Adminsitracion Comentarios</v-card-title>
                         <v-card-actions>
                             <v-btn color="grey light-2" elevation="10" rounded @click="btn_nuevo" title="Nuevo Registro">Nuevo</v-btn>
                             <v-btn color="grey light-2" elevation="10" rounded @click="btn_editar" title="Editar Registro">Editar</v-btn>
