--- a/app/Templates/usr_registro.html
+++ b/app/Templates/usr_registro.html
@@ -8,44 +8,44 @@
   <v-row class="align-center pa-2" justify="center">
     <v-col cols="12" sm="6" md="4" class="px-2 py-2">
       <v-card class="align-center pa-2" elevation=15 width="350">
-        <v-card-title>Acceso a la Aplicación</v-card-title>    
-          <form name="formularioregistro" @submit="submit" method="POST">
+        <v-card-title>Crear Usuario</v-card-title>    
+          <form name="formularioregistro" submit="submit" method="POST">
             <v-text-field
-              name="user_name"
+              name="usr_name"
               :counter="25"
               solo
               type="text"
               label="Nombre del Usuario"
-              id="user_name"
+              id="usr_name"
               required
               prepend-inner-icon="mdi-account"
               clearable
             ></v-text-field>
             <v-text-field
-              name="user_lastname"
+              name="usr_lastname"
               :counter="25"
               solo
               type="text"
               label="Apellido del Usuario"
-              id="user_lastname"
+              id="usr_lastname"
               required
               prepend-inner-icon="mdi-account"
               clearable
               ></v-text-field>
             <v-text-field
-                name="email"
+                name="usr_email"
                 :counter="30"
                 solo
                 type="email"
                 label="Correo del Usuario"
-                id="email"
+                id="usr_email"
                 required
                 prepend-inner-icon="mdi-account"
                 clearable
               ></v-text-field>
 
               <v-text-field
-                name="usrpassword"
+                name="usr_password"
                 solo
                 type="password"
                 label="Clave de Acceso"
@@ -77,8 +77,8 @@
 
             <v-divider class="py-3"></v-divider>
 
-            <v-btn class="mr-4" type="submit">Acceder</v-btn>
-            <v-btn  href="/">Salir</v-btn>
+            <v-btn class="mr-4" type="submit" title="Crear Usuario">Crear Usuario</v-btn>
+            <v-btn title="Salir del modulo" href="/">Salir</v-btn>
           </form>
       </v-card>
     </v-col>
@@ -87,5 +87,5 @@
 
 
 {% endblock %}
-{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen en quantumsdata.co, son propiedad de sus respectivos dueños. {% endblock %}
+{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
 {% block text_footer_02 %} Hotel Demo - Atencion sin Igual - Todos los derechos reservados.{% endblock %}
