--- a/app/Templates/adm_reservas.html
+++ b/app/Templates/adm_reservas.html
@@ -14,12 +14,12 @@
             <v-row class="d-flex align-center pt-3" justify="space-around" no-gutters>
                 <v-col class="px-2 py-2">
                     <v-card class="px-2 py-2">
-                        <v-card-title>Seguridad</v-card-title>
+                        <v-card-title>Administracion Reservas</v-card-title>
                         <v-card-actions>
-                            <v-btn color="grey light-2" elevation="10" rounded @click="btn_nuevo">Nuevo</v-btn>
-                            <v-btn color="grey light-2" elevation="10" rounded @click="btn_editar">Editar</v-btn>
-                            <v-btn color="grey light-2" elevation="10" rounded @click="btn_editar">Eliminar</v-btn>
-                            <v-btn color="grey light-2" elevation="10" rounded @click="btn_salir">Salir</v-btn>
+                            <v-btn color="grey light-2" elevation="10" rounded title="Nuevo Registro">Nuevo</v-btn>
+                            <v-btn color="grey light-2" elevation="10" rounded title="Editar Registro">Editar</v-btn>
+                            <v-btn color="grey light-2" elevation="10" rounded title="Eliminar Registro">Eliminar</v-btn>
+                            <v-btn color="grey light-2" elevation="10" rounded href="/dashboard" title="Salir Modulo">Salir</v-btn>
                         </v-card-actions>
                     </v-card>   
                 </v-col>
@@ -29,5 +29,5 @@
     </v-card-text>
 </v-card>
 {% endblock %}
-{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen en quantumsdata.co, son propiedad de sus respectivos dueños. {% endblock %}
+{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
 {% block text_footer_02 %} Hotel Demo - Atencion sin Igual - Todos los derechos reservados.{% endblock %}
