--- a/app/Templates/dashboard.html
+++ b/app/Templates/dashboard.html
@@ -16,14 +16,14 @@
                 <v-col cols="12" sm="6" md="4" class="px-2 py-2">
                     <v-card class="px-2 py-2" max-width="315">
                         <v-card-actions>
-                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded @click="adm_habitaciones">Habitaciones</v-btn>
+                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm_habitaciones" title="Administrar Habitaciones">Habitaciones</v-btn>
                         </v-card-actions>
                     </v-card>   
                 </v-col>
                 <v-col cols="12" sm="6" md="4" class="px-2 py-2">
                     <v-card class="px-2 py-2" max-width="315">
                         <v-card-actions>
-                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded @click="adm_reservas">Reservas</v-btn>
+                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm_reservas" title="Administrar Reservas">Reservas</v-btn>
                         </v-card-actions>
                     </v-card>
                 </v-col>  
@@ -34,14 +34,14 @@
                 <v-col cols="12" sm="6" md="4" class="px-2 py-2">
                     <v-card class="px-2 py-2" max-width="315">
                         <v-card-actions>
-                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded @click="adm_seguridad">Seguridad</v-btn>
+                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm_seguridad" title="Administrar Seguridad">Seguridad</v-btn>
                         </v-card-actions>
                     </v-card>   
                 </v-col>
                 <v-col cols="12" sm="6" md="4" class="px-2 py-2">
                     <v-card class="px-2 py-2" max-width="315">
                         <v-card-actions>
-                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded @click="adm_comentarios">Comentarios y Calificaciones</v-btn>
+                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm_comentarios" title="Administrar Comentarios">Comentarios y Calificaciones</v-btn>
                         </v-card-actions>
                     </v-card>
                 </v-col>  
@@ -51,5 +51,5 @@
     </v-card-text>
 </v-card>
 {% endblock %}
-{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen en quantumsdata.co, son propiedad de sus respectivos dueños. {% endblock %}
+{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
 {% block text_footer_02 %} Hotel Demo - Atencion sin Igual - Todos los derechos reservados.{% endblock %}
