--- a/app/Templates/index.html
+++ b/app/Templates/index.html
@@ -21,8 +21,8 @@
           <p class="text-subtitle-1 font-weight-bold">Consultar disponibilidad para tu estadia en la ciudad</p>
         </v-card-text>
         <v-toolbar dense floating>
-          <v-text-field type=date label="Start date" clear-icon="mdi-clear" hide-details prepend-icon="mdi-magnify" single-line clearable></v-text-field>
-          <v-btn icon>
+          <v-text-field name="fecha_busqueda" type="date" label="Fecha Busqueda" id="fecha_busqueda" title="Buscar Disponibilidad" prepend-icon="mdi-magnify" dense hide-details clearable></v-text-field>
+          <v-btn icon title="Buscar">
             <v-icon>mdi-dots-vertical</v-icon>
           </v-btn>
         </v-toolbar>
@@ -37,7 +37,6 @@
 <template>
   <v-row>
     <v-divider></v-divider>
-    <v-space></v-space>
   </v-row>
   
   <v-row class="d-flex align-center" justify="space-around">
@@ -62,9 +61,9 @@
         </v-card-text>
 
         <v-card-actions>
-          <v-btn color="orange" text>Compartir</v-btn>
+          <v-btn color="orange" text title="Compartir">Compartir</v-btn>
 
-          <v-btn color="orange" text>Explorar</v-btn>
+          <v-btn color="orange" text title="Explorar">Explorar</v-btn>
         </v-card-actions>
       </v-card>
     </v-col>
@@ -85,9 +84,9 @@
         </v-card-text>
 
         <v-card-actions>
-          <v-btn color="orange" text>Compartir</v-btn>
+          <v-btn color="orange" text title="Compartir">Compartir</v-btn>
 
-          <v-btn color="orange" text>Explorar</v-btn>
+          <v-btn color="orange" text title="Explorar">Explorar</v-btn>
         </v-card-actions>
       </v-card>
     </v-col>
@@ -108,16 +107,15 @@
         </v-card-text>
 
         <v-card-actions>
-          <v-btn color="orange" text>Compartir</v-btn>
+          <v-btn color="orange" text title="Compartir">Compartir</v-btn>
 
-          <v-btn color="orange" text>Explorar</v-btn>
+          <v-btn color="orange" text title="Explorar">Explorar</v-btn>
         </v-card-actions>
       </v-card>
     </v-col>
   </v-row>
   <v-row>
     <v-divider></v-divider>
-    <v-space></v-space>
   </v-row>
 </template>
 
@@ -127,8 +125,7 @@
 <template>
   <v-row>
     <v-divider></v-divider>
-    <v-space></v-space>
-  </v-row>
+   </v-row>
   
   <v-row class="d-flex align-center pt-5" justify="space-around">
     <h2 class="justify">Los Mejores Precios para tu Estadia</h2>
@@ -136,7 +133,7 @@
 
     <v-card loading="loading" class="mx-auto my-12" max-width="900">
       <template slot="progress">
-        <v-progress-linear color="deep-purple" height="10" indeterminate></v-progress-linear>
+        <v-progress-linear color="deep-purple" height="10" indeterminate title="Procesando"></v-progress-linear>
       </template>
       <v-row class="d-flex align-center py-2 pl-3 pr-2" justify="space-around" no-gutters>
         <v-col>
@@ -185,14 +182,14 @@
                 <v-col>
                   <v-card class="px-2 py-2" max-width="300">
                     <v-card-actions>
-                      <v-btn color="amber darken-4" width="250" @click="reserve">Realice su Reserva</v-btn>
+                      <v-btn color="amber darken-4" width="250" click="reserve" title="Realice su Reserva">Realice su Reserva</v-btn>
                     </v-card-actions>
                   </v-card>
                 </v-col>
                 <v-col>
                   <v-card class="px-2 py-2" tile max-width="300">
                     <v-card-actions>
-                      <v-btn color="green darken-2 white--text" width="250" @click="comentarios">Comentarios</v-btn>
+                      <v-btn color="green darken-2 white--text" width="250" click="comentarios" title="Busque Comentarios">Comentarios</v-btn>
                     </v-card-actions> 
                   </v-card>
                 </v-col>
@@ -200,27 +197,27 @@
             </v-row>  
           </v-container>
       
-          <v-row class="mx-0" justify="space-around" no-gutters>
+          <v-row justify="space-around" no-gutters>
             <v-col>
               <div class="my-4 text-subtitle-1 font-weight-bold">$ 160,000 • Habitación, Diario</div>
             </v-col>
           
             <v-col>
               <v-container fluid>
-                <v-row class="mx-0" justify="space-around" no-gutters>
+                <v-row justify="space-around" no-gutters>
                   <v-col cols="12">
-                    <div class="text-subtitle-1">Llegada
-                      <v-text-field label="Start date" type=date dense clear-icon="mdi-clear" hide-details single-line></v-text-field>
-                    </div>
+                       <v-toolbar dense floating>
+                      <v-text-field name="fecha_inicio" type="date" label="Fecha de Inicio" id="fecha_inicio" title="Fecha Llegada" prepend-icon="mdi-magnify" dense hide-details clearable></v-text-field>
+                      </v-toolbar>
                   </v-col>
                 </v-row>
               </v-container>
               <v-container fluid>
                 <v-row justify="space-around" no-gutters>
                   <v-col cols="12">
-                    <div class="text-subtitle-1">Partida
-                      <v-text-field label="End date" type=date dense clear-icon="mdi-clear" hide-details single-line></v-text-field>
-                    </div>
+                      <v-toolbar dense floating>
+                      <v-text-field name="fecha_fin" type="date" label="Fecha Partida" id="fecha_fin" title="Fecha Partida" prepend-icon="mdi-magnify" dense hide-details clearable></v-text-field>
+                      </v-toolbar>
                   </v-col>
                 </v-row>
               </v-container>
@@ -229,11 +226,11 @@
             <v-col>
                 <template>
                   <v-container fluid>
-                    <v-row class="pt-5" justify="space-around" no-gutters>
+                    <v-row justify="space-around" no-gutters>
                       <v-col cols="12">
                         <v-combobox
-                          v-model="select"
-                          items=[1,2,3,4,5,6,7,8,9,10]
+                          name="cantidad_adultos"
+                          :items=[1,2,3,4,5,6,7]
                           label="Adultos"
                           clearable
                           dense
@@ -249,8 +246,8 @@
                     <v-row justify="space-around" no-gutters>
                       <v-col cols="12">
                         <v-combobox
-                          v-model="select"
-                          items="1,2,3,4,5,6,7,8,9,10"
+                          name="cantidad_menores"
+                          :items=[1,2,3,4,5,6]
                           label="Niños"
                           clearable
                           dense
@@ -265,17 +262,18 @@
             </v-col>
           </v-row>
 
-          <v-row align="center" class="mx-0">
+          <v-row justify="space-around" no-gutters class="mx-0">
             <div>La habitación incluye desayuno americano, se reciben varios medios de pago</div>
           </v-row>
         </v-card-text>
   
       <v-divider class="mx-4"></v-divider>
   
-      <v-card-title>Esta disponible</v-card-title>
+      
       <v-row class="mx-0" justify="space-around" no-gutters>
+        <v-card-title>Esta disponible</v-card-title>
         <v-card-actions>
-          <v-btn color="amber darken-4" width="250" @click="reserve">Realice su Reserva</v-btn>
+          <v-btn color="amber darken-4" width="250" click="reserve" title="Realice su Reserva">Realice su Reserva</v-btn>
         </v-card-actions>
       </v-row>
     </v-card>
@@ -285,7 +283,6 @@
 {% block contenido_4 %}
 <v-row>
   <v-divider></v-divider>
-  <v-space></v-space>
 </v-row>
 
 <v-row class="d-flex align-center pt-5" justify="space-around">
@@ -299,7 +296,7 @@
         Habitaciones Disponibles
         <v-spacer></v-spacer>
         <v-text-field
-          v-model="search"
+          name="search"
           append-icon="mdi-magnify"
           label="Consultar Disponibilidad de Habitaciones"
           single-line
@@ -307,9 +304,9 @@
         ></v-text-field>
       </v-card-title>
       <v-data-table
-        headers = [{ text: 'Habitaciones', align: 'start', sortable: true, value: 'no_habitacion',},
+        :headers = [{ text: 'Habitaciones', align: 'start', sortable: true, value: 'no_habitacion',},
         { text: 'Habitacion', value: 'no_habitacion' },{ text: 'Disponible', value: 'disponible' } ]
-        items={no_habitacion: 'Habitacion 1', disponible: Si}
+        :items=[{no_habitacion: 'Habitacion 1', disponible: 'disponible'}]
         search="search"
       ></v-data-table>
     </v-card>
@@ -321,7 +318,6 @@
 {% block contenido_5 %}
 <v-row>
   <v-divider></v-divider>
-  <v-space></v-space>
 </v-row>
 
 <v-row class="d-flex align-center pt-5" justify="space-around">
@@ -383,12 +379,11 @@
     </v-card>
     <v-row>
       <v-divider></v-divider>
-      <v-space></v-space>
     </v-row>
   </template>
 
   
 {% endblock %}
 
-{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen en quantumsdata.co, son propiedad de sus respectivos dueños. {% endblock %}
+{% block text_footer_01 %} Todas las marcas comerciales y registradas que aparecen aqui, son propiedad de sus respectivos dueños. {% endblock %}
 {% block text_footer_02 %} Hotel Demo - Atencion sin Igual - Todos los derechos reservados.{% endblock %}
