Coloque la nueva carpeta Styles para los CSS

--- a/app/Templates/Habitaciones.html
+++ b/app/Templates/Habitaciones.html
@@ -3,7 +3,7 @@
 <head>  
     
     <script src=""> </script>
-    <link rel="stylesheet" type="text/css" href="Habitaciones.css"/>
+    <link rel="stylesheet" type="text/css" href="Styles/Habitaciones.css"/>
     <title>Habitaciones</title> 
     <meta charset="UTF-8"> 
     
