--- a/app/Templates/adm_admin.html
+++ b/app/Templates/adm_admin.html
@@ -3,7 +3,7 @@
 <head>  
     
     <script src="JS_adm_admin.js"> </script>
-    <link rel="stylesheet" type="text/css" href="CSS_adm_admin.css"/>
+    <link rel="stylesheet" type="text/css" href="Styles/CSS_adm_admin.css"/>
     <title>Administracion</title> 
     <meta charset="UTF-8"> 
     
