Se añade la ruta de habitaciones en views.py

--- a/app/Templates/Habitaciones.html
+++ b/app/Templates/Habitaciones.html
@@ -1,47 +1,38 @@
-<html> 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"type="text/css" href="{{ url_for('static',filename='styles/Habitaciones.css') }}">
+        <title>Habitaciones</title> 
+    </head>
+    <body>
+        <h1>Si buscas más aqui las encontraras</h1>
 
-<head>  
-    
-    <script src=""> </script>
-    <link rel="stylesheet" type="text/css" href="Styles/Habitaciones.css"/>
-    <title>Habitaciones</title> 
-    <meta charset="UTF-8"> 
-    
-</head>
-
-<body>
-    <h1>Si buscas más aqui las encontraras</h1>
-
-    <form name="ForHab"> 
-        <p><input type="text" id="Buscar_hab" name="Buscar_hab" placeholder="Colocar la fecha indicada"><input type="submit" id="boton_busc" name="boton_busc" value="Buscar"></p>
-    
-    </form>
-
-    <div id="primeracaj">
-         <table>
-             <tr>
-                <td><img src="1965.jpg" width="250" height="160"></td>
-                <td><h2>Habitación1</h2>La habitación consta de un baño interno, cama doble, dos muebles de noche y un minibar.</td>
-                <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
-             </tr>
-             <tr>
-                <td><img src="bedroom-interior.jpg" width="250" height="160"></td>
-                <td><h2>Habitación2</h2>La habitación consta de un baño interno, cama sencilla, muebles y un minibar.</td>
-                <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
-             </tr>
-             <tr>
-                <td><img src="luxury-bedroom-in-hotel.jpg" width="250" height="160"></td>
-                <td><h2>Habitación3</h2>La habitación consta de un baño interno, cama doble, un jacuzzi, muebles y un minibar.</td>
-                <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
-             </tr>
-         </table>
-    </div>
-
+        <form name="ForHab"> 
+            <p><input type="text" id="Buscar_hab" name="Buscar_hab" placeholder="Colocar la fecha indicada"><input type="submit" id="boton_busc" name="boton_busc" value="Buscar"></p>
         
-        
+        </form>
 
-    
-
-</body>
-
+        <div id="primeracaj">
+             <table>
+                 <tr>
+                    <td><img src="{{ url_for('static',filename='img/1965.jpg')}}" width="250" height="160"></td>
+                    <td><h2>Habitación1</h2>La habitación consta de un baño interno, cama doble, dos muebles de noche y un minibar.</td>
+                    <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
+                 </tr>
+                 <tr>
+                    <td><img src="{{ url_for('static',filename='img/bedroom-interior.jpg')}}" width="250" height="160"></td>
+                    <td><h2>Habitación2</h2>La habitación consta de un baño interno, cama sencilla, muebles y un minibar.</td>
+                    <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
+                 </tr>
+                 <tr>
+                    <td><img src="{{ url_for('static',filename='img/buscador.png')}}" width="250" height="160"></td>
+                    <td><h2>Habitación3</h2>La habitación consta de un baño interno, cama doble, un jacuzzi, muebles y un minibar.</td>
+                    <td><input type="submit" id="boton_reser1" name="boton_reser1" value="Reserva"></p></td>
+                 </tr>
+             </table>
+        </div>
+    </body>
 </html>
