--- a/app/Templates/dashboard.html
+++ b/app/Templates/dashboard.html
@@ -4,6 +4,8 @@
 {% block tit_bar %} Centara Grand Hotel {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
+{% block btn_dashboard %} DashBoard {% endblock %}
+{% block btn_about %} Acerca de {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 
 
@@ -34,7 +36,7 @@
                 <v-col cols="12" sm="6" md="4" class="px-2 py-2">
                     <v-card class="px-2 py-2" max-width="315">
                         <v-card-actions>
-                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm/users" title="Administrar Seguridad">Seguridad</v-btn>
+                            <v-btn color="grey light-2" height="60" width="280" elevation="10" rounded href="/adm_users" title="Administrar Seguridad">Seguridad</v-btn>
                         </v-card-actions>
                     </v-card>   
                 </v-col>
