--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -12,24 +12,38 @@
   <body>
       <div id="app_ht">
         <v-app>
-          <v-app-bar app color="#00000" dark elevate-on-scroll elevation=5 src="https://picsum.photos/1920/1080?random">
+          <v-app-bar app color="#00000" dark elevate-on-scroll elevation=5>
             <v-app-bar-nav-icon @click="drawer = !drawer" title="Menu"></v-app-bar-nav-icon>
             <v-toolbar-title class="xs-4" shrink-on-scroll>{% block tit_bar %} {% endblock %}</v-toolbar-title>
             <v-spacer></v-spacer>
+            {% if session['acc'] != True %}
             <v-btn class="pd-2 ml-4 xs" elevation="8" rounded outlined title="Acceder" href="/usr_login" @click="dial_reg = true">
               <v-icon class="md-2" left>mdi-account-circle</v-icon>
               {% block btn_login %} {% endblock %}
             </v-btn>
-    
-            <v-btn v-if="userloggedIn == true" class="error pd-2 ml-4 xs" elevation="8" title="Salir" rounded @click.prevent="signOut">
-              <v-icon class="md-2" left>mdi-exit-to-app</v-icon>
-              {% block btn_exit %} {% endblock %}      
-            </v-btn>
-            
-            <v-btn v-else class="success pd-2 ml-4 xs" elevation="8" rounded title="Registrar Usuario" href="/usr_registro" @click="dial_reg = true">
+
+            <v-btn class="success pd-2 ml-4 xs" elevation="8" rounded title="Registrar Usuario" href="/usr_registro" @click="dial_reg = true">
               <v-icon class="md-2" left>mdi-account-plus</v-icon>
               {% block btn_signin %} {% endblock %}       
             </v-btn>
+            {% endif %} 
+
+            {% if session['acc'] == True %}
+            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="DashBoard" href="/dashboard" @click="dial_reg = true">
+              <v-icon class="md-2" left>mdi-cards-variant</v-icon>
+              {% block btn_dashboard %} {% endblock %}     
+            </v-btn>
+
+            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="About" href="/" @click="dial_reg = true">
+              <v-icon class="md-2" left>mdi-help-circle</v-icon>
+              {% block btn_about %} {% endblock %}     
+            </v-btn>
+
+            <v-btn class="error pd-2 ml-4 xs" elevation="8" title="Salir" rounded href="{{url_for('main.logout')}}">
+              <v-icon class="md-2" left>mdi-exit-to-app</v-icon>
+              {% block btn_exit %} {% endblock %}      
+            </v-btn>
+            {% endif %}
           </v-app-bar>
 
           <v-main class="pt-0">
@@ -113,6 +127,7 @@
 
       <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+      <script src="{{ url_for('static', filename='js/responses.js') }}"></script>
       <script>
         new Vue({
           el: '#app_ht',
