--- a/app/Templates/adm_comentarios.html
+++ b/app/Templates/adm_comentarios.html
@@ -4,6 +4,8 @@
 {% block tit_bar %} Centara Grand Hotel {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
+{% block btn_dashboard %} DashBoard {% endblock %}
+{% block btn_about %} Acerca de {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 
 
