--- a/app/Templates/adm_habitaciones.html
+++ b/app/Templates/adm_habitaciones.html
@@ -4,6 +4,8 @@
 {% block tit_bar %} Centara Grand Hotel {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
+{% block btn_dashboard %} DashBoard {% endblock %}
+{% block btn_about %} Acerca de {% endblock %}
 {% block btn_exit %} Salir {% endblock %}
 
 
@@ -14,7 +16,7 @@
             <v-row class="d-flex align-center pt-3" justify="space-around" no-gutters>
                 <v-col class="px-2 py-2">
                     <v-card class="px-2 py-2">
-                        <v-card-title>Adminsitracion Habitaciones</v-card-title>
+                        <v-card-title>Administracion Habitaciones</v-card-title>
                         <v-card-actions>
                             <v-btn color="grey light-2" elevation="10" rounded @click="btn_nuevo" title="Nuevo Registro">Nuevo</v-btn>
                             <v-btn color="grey light-2" elevation="10" rounded @click="btn_editar" title="Editar Registro">Editar</v-btn>
