--- a/app/Templates/base.html
+++ b/app/Templates/base.html
@@ -17,24 +17,24 @@
             <v-toolbar-title class="xs-4" shrink-on-scroll>{% block tit_bar %} {% endblock %}</v-toolbar-title>
             <v-spacer></v-spacer>
             {% if session['acc'] != True %}
-            <v-btn class="pd-2 ml-4 xs" elevation="8" rounded outlined title="Acceder" href="/usr_login" @click="dial_reg = true">
+            <v-btn class="pd-2 ml-4 xs" elevation="8" rounded outlined title="Acceder" href="/usr_login">
               <v-icon class="md-2" left>mdi-account-circle</v-icon>
               {% block btn_login %} {% endblock %}
             </v-btn>
 
-            <v-btn class="success pd-2 ml-4 xs" elevation="8" rounded title="Registrar Usuario" href="/usr_registro" @click="dial_reg = true">
+            <v-btn class="success pd-2 ml-4 xs" elevation="8" rounded title="Registrar Usuario" href="/usr_registro">
               <v-icon class="md-2" left>mdi-account-plus</v-icon>
               {% block btn_signin %} {% endblock %}       
             </v-btn>
             {% endif %} 
 
             {% if session['acc'] == True %}
-            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="DashBoard" href="/dashboard" @click="dial_reg = true">
+            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="DashBoard" href="/dashboard">
               <v-icon class="md-2" left>mdi-cards-variant</v-icon>
               {% block btn_dashboard %} {% endblock %}     
             </v-btn>
 
-            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="About" href="/" @click="dial_reg = true">
+            <v-btn class="orange pd-2 ml-4 xs" elevation="8" rounded title="About" href="/">
               <v-icon class="md-2" left>mdi-help-circle</v-icon>
               {% block btn_about %} {% endblock %}     
             </v-btn>
@@ -133,18 +133,6 @@
           el: '#app_ht',
           vuetify: new Vuetify(),
         })
-      </script>
-      <script>
-        export default {
-          data: () => ({
-            drawer: null,
-            dial_reg: false,
-            error: null,
-            email: '',
-            usr_name: '',
-            userloggedIn: true,
-          }),
-        }
       </script>
   </body>
 
