--- a/app/Templates/adm/comentarios.html
+++ b/app/Templates/adm/comentarios.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block titulo %} Centara Grand Hotel {% endblock %}
-{% block tit_bar %} Centara Grand Hotel {% endblock %}
+{% block titulo %} Administrador de comentarios {% endblock %}
+{% block tit_bar %} Administrar comentarios {% endblock %}
 {% block btn_login %} Acceso {% endblock %}
 {% block btn_signin %} Registro {% endblock %}
 {% block btn_dashboard %} DashBoard {% endblock %}
@@ -11,9 +11,6 @@
 {% block contenido_1 %}
 <v-card class="d-flex align-center pa-2" height="250px" width = "720px" elevation=15> 
     <v-card-text>
-      <v-card-actions>
-        <v-btn color="gray" title="Añadir nuevo usuario">Añadir +</v-btn>
-      </v-card-actions>
          <v-container>
             <v-row class="d-flex align-center pt-3" justify="space-around">
                 <v-col class="px-2 py-2">
@@ -24,7 +21,7 @@
                                   <v-text-field
                                       id="search"
                                       append-icon="mdi-magnify"
-                                      label="Buscar usuarios"
+                                      label="Buscar"
                                   ></v-text-field>
                               </v-col>
                               <v-col class="text-h4 white--text font-weight-bold">
@@ -54,7 +51,7 @@
 
     <!--Titulo-->
     <v-row class="d-flex align-center" justify="space-around"> 
-        <h2 class="justify">Usuarios</h2> 
+        <h2 class="justify">Comentarios</h2> 
     </v-row>
 
     <!--Contenedor de datos-->
